--- a/Ubik.EF/Ubik.EF.csproj
+++ b/Ubik.EF/Ubik.EF.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseQueryRepository.cs" />
     <Compile Include="BaseReadRepository.cs" />
     <Compile Include="BaseReadWriteRepository.cs" />
     <Compile Include="BaseRepositoryWithAmbientContext.cs" />
