--- a/Ubik.Infra/Ubik.Infra.csproj
+++ b/Ubik.Infra/Ubik.Infra.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IQueryRepository.cs" />
     <Compile Include="Contracts\IReadRepository.cs" />
     <Compile Include="Contracts\IWriteRepository.cs" />
     <Compile Include="DataManagement\Group\GroupElement.cs" />
