--- a/Ubik.Web.Auth/Ubik.Web.Auth.csproj
+++ b/Ubik.Web.Auth/Ubik.Web.Auth.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Managers\ApplicationRoleManager.cs" />
     <Compile Include="Managers\ApplicationSignInManager.cs" />
     <Compile Include="Managers\ApplicationUserManager.cs" />
+    <Compile Include="OwinExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ClaimRepository.cs" />
     <Compile Include="Repositories\RoleRepository.cs" />
