--- a/Ubik.Web.BackOffice/Ubik.Web.BackOffice.csproj
+++ b/Ubik.Web.BackOffice/Ubik.Web.BackOffice.csproj
@@ -73,9 +73,11 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BackofficeContentHelper.cs" />
+    <Compile Include="BackofficeNavigationElement.cs" />
     <Compile Include="BackofficePage.cs" />
     <Compile Include="Contracts\IAdminContentPage.cs" />
     <Compile Include="Contracts\IBackOfficeContentProvider.cs" />
+    <Compile Include="Contracts\IBackOfficeMenuProvider.cs" />
     <Compile Include="Controllers\BackOfficeController.cs" />
     <Compile Include="Controllers\Calendar.cs" />
     <Compile Include="Controllers\Charts.cs" />
@@ -95,6 +97,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Ubik.Infra\Ubik.Infra.csproj">
+      <Project>{F7CB1815-5D42-469D-9A35-5C3EF88733E5}</Project>
+      <Name>Ubik.Infra</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Ubik.Web.Auth\Ubik.Web.Auth.csproj">
       <Project>{78A78FA0-EC82-45B9-824B-F356A046137F}</Project>
       <Name>Ubik.Web.Auth</Name>
@@ -103,6 +109,13 @@
       <Project>{54A78BF9-AC25-4E8E-9BCF-0628ED0DB2AF}</Project>
       <Name>Ubik.Web.Cms</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Ubik.Web.Infra\Ubik.Web.Infra.csproj">
+      <Project>{7EACFD79-0D49-43C3-A388-ABC4B0DDFE82}</Project>
+      <Name>Ubik.Web.Infra</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Configuration\MainMenu.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
