moved IResident to CMS

--- a/Ubik.Web.Auth/Ubik.Web.Auth.csproj
+++ b/Ubik.Web.Auth/Ubik.Web.Auth.csproj
@@ -134,6 +134,10 @@
       <Project>{f7cb1815-5d42-469d-9a35-5c3ef88733e5}</Project>
       <Name>Ubik.Infra</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Ubik.Web.Cms\Ubik.Web.Cms.csproj">
+      <Project>{54A78BF9-AC25-4E8E-9BCF-0628ED0DB2AF}</Project>
+      <Name>Ubik.Web.Cms</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Ubik.Web.Infra\Ubik.Web.Infra.csproj">
       <Project>{7EACFD79-0D49-43C3-A388-ABC4B0DDFE82}</Project>
       <Name>Ubik.Web.Infra</Name>
