--- a/Ubik.Web.Auth/Ubik.Web.Auth.csproj
+++ b/Ubik.Web.Auth/Ubik.Web.Auth.csproj
@@ -116,7 +116,8 @@
     <Compile Include="Stores\ApplicationRoleStore.cs" />
     <Compile Include="SystemClaims.cs" />
     <Compile Include="SystemRoles.cs" />
-    <Compile Include="UserAdministrationClaims.cs" />
+    <Compile Include="UserAdministrationAuth.cs" />
+    <Compile Include="Contracts\IResourceAuthProvider.cs" />
     <Compile Include="ViewModels\AddUserViewModel.cs" />
     <Compile Include="ViewModels\RoleRowViewModel.cs" />
     <Compile Include="ViewModels\RoleViewModel.cs" />
