--- a/Ubik.Infra/Ubik.Infra.csproj
+++ b/Ubik.Infra/Ubik.Infra.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Contracts\IHierarchyData.cs" />
     <Compile Include="Contracts\IQueryRepository.cs" />
     <Compile Include="Contracts\IReadRepository.cs" />
+    <Compile Include="Contracts\IRequiresInitialization.cs" />
     <Compile Include="Contracts\IWeighted.cs" />
     <Compile Include="Contracts\IWriteRepository.cs" />
     <Compile Include="DataManagement\Group\GroupElement.cs" />
