--- a/Ubik.UI.MVC/Web.config
+++ b/Ubik.UI.MVC/Web.config
@@ -5,11 +5,10 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Ubik.UI.MVC-20150920072328.mdf;Initial Catalog=aspnet-Ubik.UI.MVC-20150920072328;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="authconnectionstring" connectionString="Server=.\X2012;Database=UbikAuth;User Id=ubikuser;Password=qazwsx123!@#;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
