script onjection backoffice

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/web.config
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/web.config
@@ -19,6 +19,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="Ubik.Web.Cms" />
         <add namespace="Ubik.UI.MVC" />
+        <add namespace="Ubik.Web" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
