--- a/Ubik.UI.MVC/packages.config
+++ b/Ubik.UI.MVC/packages.config
@@ -11,6 +11,7 @@
   <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net451" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net451" />
   <package id="jQuery" version="2.1.4" targetFramework="net451" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="2.3.0" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net451" />
   <package id="Mehdime.Entity" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
