--- a/Ubik.Web.Infra/Ubik.Web.Infra.csproj
+++ b/Ubik.Web.Infra/Ubik.Web.Infra.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Navigation\NavigationElementRole.cs" />
     <Compile Include="Navigation\NavigationGroupDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\RedirectViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ubik.Infra\Ubik.Infra.csproj">
