--- a/Ubik.Infra/Ubik.Infra.csproj
+++ b/Ubik.Infra/Ubik.Infra.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Contracts\IRequiresInitialization.cs" />
     <Compile Include="Contracts\IHasParent.cs" />
     <Compile Include="Contracts\ISelectable.cs" />
+    <Compile Include="Contracts\IServerResponse.cs" />
     <Compile Include="Contracts\IWeighted.cs" />
     <Compile Include="Contracts\IWriteRepository.cs" />
     <Compile Include="DataManagement\Group\GroupElement.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="DataManagement\Group\IGroupValidatorService.cs" />
     <Compile Include="Ext\CollectionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerResponseStatus.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
