--- a/Ubik.UI.MVC/Ubik.UI.MVC.csproj
+++ b/Ubik.UI.MVC/Ubik.UI.MVC.csproj
@@ -645,6 +645,7 @@
     <Content Include="Areas\Backoffice\Views\UserAdministration\Partials\UserList.cshtml" />
     <Content Include="Areas\Backoffice\Views\UserAdministration\Partials\UserChangePassword.cshtml" />
     <Content Include="Areas\Backoffice\Views\UserAdministration\Partials\UserLockedState.cshtml" />
+    <Content Include="Areas\Backoffice\Views\Shared\Partials\ServerFeedbackModal.cshtml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
