started https://github.com/mitsbits/Ubik/issues/11

--- a/Ubik.UI.MVC/Web.config
+++ b/Ubik.UI.MVC/Web.config
@@ -9,6 +9,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
   <connectionStrings>
     <add name="authconnectionstring" connectionString="Server=.\X2012;Database=UbikAuth;User Id=ubikuser;Password=qazwsx123!@#;" providerName="System.Data.SqlClient" />
+    <add name="cmsconnectionstring"  connectionString="Server=.\X2012;Database=Ubik;User Id=ubikuser;Password=qazwsx123!@#;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
