--- a/Ubik.Web.Components/Ubik.Web.Components.csproj
+++ b/Ubik.Web.Components/Ubik.Web.Components.csproj
@@ -30,6 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Data.v12.2, Version=12.2.16.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Xpo.v12.2, Version=12.2.16.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
@@ -39,6 +41,8 @@
     <Compile Include="ComponentBase.cs" />
     <Compile Include="ComponentStateFlavor.cs" />
     <Compile Include="ComponentStateTransitionException.cs" />
+    <Compile Include="Contracts\IDeviceAdministrationService.cs" />
+    <Compile Include="Contracts\IDeviceAdministrationViewModelService.cs" />
     <Compile Include="Contracts\IHtmlHeadInfo.cs" />
     <Compile Include="Contracts\ICanBeDeleted.cs" />
     <Compile Include="Contracts\ICanPublishSuspend.cs" />
@@ -83,6 +87,8 @@
     <Compile Include="Domain\SectionSlotInfo.cs" />
     <Compile Include="Domain\Slot.cs" />
     <Compile Include="Query\DeviceProjection.cs" />
+    <Compile Include="ViewModels\DeviceRowViewModel.cs" />
+    <Compile Include="ViewModels\DeviceViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ubik.Infra\Ubik.Infra.csproj">
