--- a/Ubik.Infra/Ubik.Infra.csproj
+++ b/Ubik.Infra/Ubik.Infra.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Contracts\IKeyAdjuster.cs" />
     <Compile Include="Contracts\IKeyAdjusterProvider.cs" />
     <Compile Include="Contracts\IQueryRepository.cs" />
+    <Compile Include="Contracts\IReadAsyncRepository.cs" />
     <Compile Include="Contracts\IReadRepository.cs" />
     <Compile Include="Contracts\IRequiresInitialization.cs" />
     <Compile Include="Contracts\IHasParent.cs" />
@@ -56,6 +57,8 @@
     <Compile Include="DataManagement\Group\GroupingHelper.cs" />
     <Compile Include="DataManagement\Group\IGroupingService.cs" />
     <Compile Include="DataManagement\Group\IGroupValidatorService.cs" />
+    <Compile Include="DataManagement\OrderByInfo.cs" />
+    <Compile Include="DataManagement\PagedResult.cs" />
     <Compile Include="Ext\CollectionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerResponseStatus.cs" />
