--- a/Ubik.UI.MVC/packages.config
+++ b/Ubik.UI.MVC/packages.config
@@ -5,15 +5,16 @@
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net451" />
   <package id="Autofac.Mvc5.Owin" version="3.1.0" targetFramework="net451" />
   <package id="Autofac.Owin" version="3.1.0" targetFramework="net451" />
+  <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net451" />
   <package id="bootstrap" version="3.3.5" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="Glimpse" version="1.8.6" targetFramework="net451" />
   <package id="Glimpse.Ado" version="1.7.3" targetFramework="net451" />
-  <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net451" />
+  <package id="Glimpse.AspNet" version="1.9.2" targetFramework="net451" />
   <package id="Glimpse.EF6" version="1.6.5" targetFramework="net451" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net451" />
   <package id="jQuery" version="2.1.4" targetFramework="net451" />
-  <package id="jquery.TypeScript.DefinitelyTyped" version="2.3.0" targetFramework="net451" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="2.3.1" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net451" />
   <package id="Mehdime.Entity" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
@@ -25,11 +26,16 @@
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net451" />
