--- a/Ubik.Web.Backoffice/Ubik.Web.Backoffice.csproj
+++ b/Ubik.Web.Backoffice/Ubik.Web.Backoffice.csproj
@@ -147,6 +147,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="AuthorizeOperationToResourceAttribute.cs" />
+    <Compile Include="AuthorizeRoleAttribute.cs" />
     <Compile Include="BackofficeContentHelper.cs" />
     <Compile Include="BackofficeNavigationElement.cs" />
     <Compile Include="BackofficePage.cs" />
@@ -154,6 +155,7 @@
     <Compile Include="Contracts\IBackofficeContent.cs" />
     <Compile Include="Contracts\IBackOfficeContentProvider.cs" />
     <Compile Include="Contracts\IBackOfficeMenuProvider.cs" />
+    <Compile Include="Controllers\Api\BackofficeOperationsController.cs" />
     <Compile Include="Controllers\Api\UserOperationsController.cs" />
     <Compile Include="Controllers\Devices.cs" />
     <Compile Include="XmlBackOfficeMenuProvider.cs" />
