--- a/Ubik.Web.Backoffice/Ubik.Web.Backoffice.csproj
+++ b/Ubik.Web.Backoffice/Ubik.Web.Backoffice.csproj
@@ -157,7 +157,7 @@
     <Compile Include="Contracts\IBackOfficeMenuProvider.cs" />
     <Compile Include="Controllers\Api\BackofficeOperationsController.cs" />
     <Compile Include="Controllers\Api\UserOperationsController.cs" />
-    <Compile Include="Controllers\Devices.cs" />
+    <Compile Include="Controllers\DevicesController.cs" />
     <Compile Include="XmlBackOfficeMenuProvider.cs" />
     <Compile Include="Controllers\BackOfficeController.cs" />
     <Compile Include="Controllers\Calendar.cs" />
