--- a/Ubik.Web.Auth/Ubik.Web.Auth.csproj
+++ b/Ubik.Web.Auth/Ubik.Web.Auth.csproj
@@ -120,7 +120,7 @@
     <Compile Include="UserAdministrationAuth.cs" />
     <Compile Include="Contracts\IResourceAuthProvider.cs" />
     <Compile Include="Contracts\IHasRolesToSelect.cs" />
-    <Compile Include="ViewModels\RoleClaimRowViewModel.cs" />
+    <Compile Include="ViewModels\RoleClaimViewModel.cs" />
     <Compile Include="ViewModels\RoleViewModel.cs" />
     <Compile Include="ViewModels\UserRowViewModel.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
