--- a/Ubik.Infra/Ubik.Infra.csproj
+++ b/Ubik.Infra/Ubik.Infra.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\ICacheProvider.cs" />
+    <Compile Include="Contracts\ICRUDRespoditory.cs" />
     <Compile Include="Contracts\IHierarchicalEnumerable.cs" />
     <Compile Include="Contracts\IHierarchyData.cs" />
     <Compile Include="Contracts\IKeyAdjuster.cs" />
