modeling https://github.com/mitsbits/Ubik/issues/11

--- a/Ubik.UI.MVC/Ubik.UI.MVC.csproj
+++ b/Ubik.UI.MVC/Ubik.UI.MVC.csproj
@@ -681,6 +681,9 @@
     <Content Include="Areas\Backoffice\Views\UserAdministration\Partials\UserChangePassword.cshtml" />
     <Content Include="Areas\Backoffice\Views\UserAdministration\Partials\UserLockedState.cshtml" />
     <Content Include="Areas\Backoffice\Views\Shared\Partials\ServerFeedbackModal.cshtml" />
+    <Content Include="Areas\Backoffice\Views\Devices\LayOuts.cshtml" />
+    <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceDetails.cshtml" />
+    <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceList.cshtml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -718,7 +721,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Backoffice\Views\Devices\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
