--- a/Ubik.Web.Components/Ubik.Web.Components.csproj
+++ b/Ubik.Web.Components/Ubik.Web.Components.csproj
@@ -33,8 +33,12 @@
     <Reference Include="DevExpress.Data.v12.2, Version=12.2.16.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Xpo.v12.2, Version=12.2.16.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
+    <Reference Include="Ubik.Web.EF">
+      <HintPath>..\Ubik.UI.MVC\Bin\Ubik.Web.EF.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasePartialModule.cs" />
@@ -87,8 +91,9 @@
     <Compile Include="Domain\SectionSlotInfo.cs" />
     <Compile Include="Domain\Slot.cs" />
     <Compile Include="Query\DeviceProjection.cs" />
-    <Compile Include="ViewModels\DeviceRowViewModel.cs" />
     <Compile Include="ViewModels\DeviceViewModel.cs" />
+    <Compile Include="ViewModels\SectionViewModel.cs" />
+    <Compile Include="ViewModels\SlotViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ubik.Infra\Ubik.Infra.csproj">
