--- a/Ubik.Infra/Ubik.Infra.csproj
+++ b/Ubik.Infra/Ubik.Infra.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Contracts\IHasParent.cs" />
     <Compile Include="Contracts\ISelectable.cs" />
     <Compile Include="Contracts\IServerResponse.cs" />
+    <Compile Include="Contracts\IViewModelBuilder.cs" />
+    <Compile Include="Contracts\IViewModelCommand.cs" />
     <Compile Include="Contracts\IWeighted.cs" />
     <Compile Include="Contracts\IWriteRepository.cs" />
     <Compile Include="DataManagement\Group\GroupElement.cs" />
