some https://github.com/mitsbits/Ubik/issues/11 admin

--- a/Ubik.UI.MVC/Ubik.UI.MVC.csproj
+++ b/Ubik.UI.MVC/Ubik.UI.MVC.csproj
@@ -684,6 +684,7 @@
     <Content Include="Areas\Backoffice\Views\Devices\LayOuts.cshtml" />
     <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceDetails.cshtml" />
     <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceList.cshtml" />
+    <Content Include="Areas\Backoffice\Views\Devices\Partials\SectionCreate.cshtml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
