--- a/Ubik.Web.Components.AntiCorruption/Ubik.Web.Components.AntiCorruption.csproj
+++ b/Ubik.Web.Components.AntiCorruption/Ubik.Web.Components.AntiCorruption.csproj
@@ -54,9 +54,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IDeviceAdministrationViewModelService.cs" />
     <Compile Include="DeviceAdministrationAuth.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DeviceAdministrationService.cs" />
+    <Compile Include="ViewModels\DeviceViewModel.cs" />
+    <Compile Include="ViewModels\SectionViewModel.cs" />
+    <Compile Include="ViewModels\SlotViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ubik.Infra\Ubik.Infra.csproj">
