--- a/Ubik.Infra/Ubik.Infra.csproj
+++ b/Ubik.Infra/Ubik.Infra.csproj
@@ -63,6 +63,7 @@
     <Compile Include="DataManagement\OrderByInfo.cs" />
     <Compile Include="DataManagement\PagedResult.cs" />
     <Compile Include="Ext\CollectionExtensions.cs" />
+    <Compile Include="Ext\SerializationExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerResponseStatus.cs" />
   </ItemGroup>
