--- a/Ubik.UI.MVC/Ubik.UI.MVC.csproj
+++ b/Ubik.UI.MVC/Ubik.UI.MVC.csproj
@@ -685,8 +685,9 @@
     <Content Include="Areas\Backoffice\Views\Devices\LayOuts.cshtml" />
     <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceDetails.cshtml" />
     <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceList.cshtml" />
-    <Content Include="Areas\Backoffice\Views\Devices\Partials\SectionCreate.cshtml" />
+    <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceSectionDetail.cshtml" />
     <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceSectionList.cshtml" />
+    <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceSectionSlotDetail.cshtml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
