--- a/Ubik.Web.Components.AntiCorruption/Ubik.Web.Components.AntiCorruption.csproj
+++ b/Ubik.Web.Components.AntiCorruption/Ubik.Web.Components.AntiCorruption.csproj
@@ -71,6 +71,10 @@
       <Project>{78A78FA0-EC82-45B9-824B-F356A046137F}</Project>
       <Name>Ubik.Web.Auth</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Ubik.Web.Cms\Ubik.Web.Cms.csproj">
+      <Project>{54A78BF9-AC25-4E8E-9BCF-0628ED0DB2AF}</Project>
+      <Name>Ubik.Web.Cms</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Ubik.Web.Components\Ubik.Web.Components.csproj">
       <Project>{8D91A185-358B-4E6E-9D3A-A1CF51DA7251}</Project>
       <Name>Ubik.Web.Components</Name>
