--- a/Ubik.Web.Components/Ubik.Web.Components.csproj
+++ b/Ubik.Web.Components/Ubik.Web.Components.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Contracts\ICanBeDeleted.cs" />
     <Compile Include="Contracts\ICanPublishSuspend.cs" />
     <Compile Include="Contracts\IHtmlMeta.cs" />
+    <Compile Include="Contracts\IModuleDescriptor.cs" />
     <Compile Include="Contracts\ITag.cs" />
     <Compile Include="Contracts\ITextualInfo.cs" />
     <Compile Include="Domain\HtmlHead.cs" />
