--- a/Ubik.Web.Backoffice/packages.config
+++ b/Ubik.Web.Backoffice/packages.config
@@ -6,6 +6,9 @@
   <package id="Autofac.Mvc5.Owin" version="3.1.0" targetFramework="net451" />
   <package id="Autofac.Owin" version="3.1.0" targetFramework="net451" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net451" />
+  <package id="elmah.corelibrary" version="1.2" targetFramework="net451" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="Mehdime.Entity" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
