--- a/Ubik.UI.MVC/Ubik.UI.MVC.csproj
+++ b/Ubik.UI.MVC/Ubik.UI.MVC.csproj
@@ -445,6 +445,7 @@
     <Content Include="Areas\Backoffice\Scripts\AdminLTE\dashboard.js" />
     <Content Include="Areas\Backoffice\Scripts\AdminLTE\demo.js" />
     <Content Include="Areas\Backoffice\Scripts\framework\Devices\layouts.js" />
+    <Content Include="Areas\Backoffice\Scripts\framework\ErrorLogs\index.js" />
     <Content Include="Areas\Backoffice\Scripts\framework\UserAdministration\Users.js" />
     <Content Include="Areas\Backoffice\Scripts\framework\UserAdministration\Roles.js" />
     <Content Include="Areas\Backoffice\Scripts\bootstrap.min.js" />
@@ -696,6 +697,7 @@
     <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceSectionDetail.cshtml" />
     <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceSectionList.cshtml" />
     <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceSectionSlotDetail.cshtml" />
+    <Content Include="Areas\Backoffice\Views\ErrorLogs\Index.cshtml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
